# aiapget-bots

./: .gitignore  README.md
ame-renamer-bot/: Dockerfile  Makefile  pyproject.toml
ame-renamer-bot/src/ame_renamer_bot/: main.py
bossbot/: Dockerfile  Makefile  README.md  pyproject.toml
bossbot/data/: polls_5330499871_20260208_200008.json  polls_5330499871_20260208_200135.json  polls_5330499871_20260208_200642.json  polls_5400528256_20260208_210737.json  polls_5400528256_20260208_211300.json  polls_5400528256_20260208_213730.json  polls_5400528256_20260208_214101.json  polls_5400528256_20260208_214614.json  polls_5400528256_20260208_220437.json  polls_5400528256_20260208_220630.json  polls_5400528256_20260208_220956.json  polls_5400528256_20260208_221107.json  polls_5400528256_20260208_223447.json  polls_5400528256_20260208_223559.json  polls_5400528256_20260208_223754.json  polls_5400528256_20260208_223903.json  polls_5400528256_20260208_224018.json  polls_5400528256_20260208_224133.json  polls_5400528256_20260208_224246.json  polls_5400528256_20260208_224407.json  polls_5400528256_20260208_224521.json  polls_5400528256_20260208_224634.json  polls_5400528256_20260208_224747.json  polls_5400528256_20260208_224901.json  polls_5400528256_20260208_225013.json  polls_5400528256_20260208_225125.json  polls_5400528256_20260208_225241.json  polls_5400528256_20260208_225428.json  polls_5400528256_20260208_225538.json  polls_5400528256_20260208_225651.json  polls_5400528256_20260208_225804.json  polls_5400528256_20260208_225912.json  polls_5400528256_20260208_230022.json  polls_5400528256_20260208_230135.json  polls_5400528256_20260208_230250.json  polls_5400528256_20260208_230440.json  polls_5400528256_20260208_230557.json  polls_5400528256_20260208_230714.json  polls_5400528256_20260208_230835.json  polls_5400528256_20260208_230949.json  (+29 more)
bossbot/src/amequizbotmaker/: __init__.py  exporters.py  extractors.py  main.py
cleaner-bot/: Makefile  pyproject.toml
cleaner-bot/files/: Quiz_no_01_Date_1_8_2025_Topic_Sushruta_brief_notes_1_8_सघरष.docx  Quiz_no_01_Date_1_8_2025_Topic_Sushruta_brief_notes_1_8_सघरष.xlsx
cleaner-bot/src/cleanerbot/: main.py
json-echo-bot/: Dockerfile  Makefile  README.md  pyproject.toml
json-echo-bot/src/jsonechobot/: main.py
quiz-attemptbot/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
quiz-attemptbot/src/quizattemptbot/: main.py
quiz-exporter/: Dockerfile  Makefile  README.md  pyproject.toml
quiz-exporter/src/quizexporter/: __init__.py  exporters.py  main.py
quiz-linkbot/: Dockerfile  Makefile  README.md  pyproject.toml
quiz-linkbot/src/quizlinkbot/: main.py
telegram-bot/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
telegram-bot/data/: polls_5330499871_20260208_172439.json  polls_5330499871_20260208_173900.json  polls_5330499871_20260208_173934.json  polls_5330499871_20260208_174804.json  polls_5330499871_20260208_175252.json  polls_5330499871_20260208_175539.json  polls_5330499871_20260208_175841.json  polls_5330499871_20260208_180913.json  polls_5330499871_20260208_181320.json  polls_5330499871_20260208_191653.json  polls_5330499871_20260208_194338.json
telegram-bot/src/amequizbot/: __init__.py  main.py
templates/: question_output.docx  questions_output.xlsx
translator-bot/: .env.example  .gitignore  pyproject.toml
translator-bot/bot/: translator.py
translator-bot/tests/: test_translator.py
