[project]
name = "amequizbotmaker"
version = "0.1.0"
description = "All-in-one Telegram bot: receive forwarded quizzes, extract poll data, and export to JSON, XLSX, and DOCX."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot>=21.0",
  "python-dotenv>=1.0.0",
  "openpyxl>=3.1.0",
  "python-docx>=1.1.0",
]

[project.scripts]
amequizbotmaker = "amequizbotmaker.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
