[project]
name = "jsonechobot"
version = "0.1.0"
description = "Telegram bot that replies with the full JSON update info for any received message."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot>=21.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
jsonechobot = "jsonechobot.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
